Polling for friend requests added. Visibility bug fixes are here too. StreamFeed sidebar pushed to side of screen

--- a/frontend/src/components/styles/StreamFeed.css
+++ b/frontend/src/components/styles/StreamFeed.css
@@ -1,7 +1,7 @@
 .streamFeed {
   padding-right: 5% !important;
   margin-left: 2% !important;
-  
+  width: 70% !important;
 }
 
 .ui.fluid.button {
